Start echo server in container

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,2 +1,7 @@
 FROM golang
+ENV GO111MODULE=on
 WORKDIR /tasks
+ADD go.mod go.sum /tasks/
+RUN go mod download
+ADD . /tasks/
+CMD ["go", "run", "server.go"]
