Use multi-stage builds

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,13 @@
-FROM golang
-ENV GO111MODULE=on
+FROM golang AS builder
+ENV CGO_ENABLED=0 GO111MODULE=on
 WORKDIR /tasks
 ADD go.mod go.sum /tasks/
 RUN go mod download
 ADD . /tasks/
-CMD ["go", "run", "server.go"]
+RUN ["go", "install"]
+
+FROM alpine
+RUN apk --no-cache add ca-certificates
+WORKDIR /root
+COPY --from=builder /go/bin/tasks /root/
+CMD ["./tasks"]
