Build and restart backend when files are changed

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang AS builder
 ENV CGO_ENABLED=0 GO111MODULE=on
 WORKDIR /tasks
+RUN go get github.com/pilu/fresh
 ADD go.mod go.sum /tasks/
 RUN go mod download
 ADD . /tasks/
