--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
-version: "3"
+version: "3.4"
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      target: builder
+    command: ["fresh"]
     ports:
       - 1323:1323
     volumes:
