Add envs for the host and port of backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,13 @@ services:
   frontend:
     build: ./frontend
     command: ["npx", "nuxt"]
+    depends_on:
+      - backend
     environment:
+      BACKEND_PORT: 1323
+      CLIENT_BACKEND_HOST: localhost
       NUXT_HOST: 0.0.0.0
+      SERVER_BACKEND_HOST: backend
     ports:
       - 3000:3000
     volumes:
