Use mycli as mysql CLI

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
 FROM golang AS builder
-ENV CGO_ENABLED=0 GO111MODULE=on
+ENV LANG=C.UTF-8 CGO_ENABLED=0 GO111MODULE=on
 WORKDIR /tasks
-RUN go get github.com/pilu/fresh
+RUN apt-get update && \
+  apt-get install -y mycli && \
+  go get github.com/pilu/fresh
 ADD go.mod go.sum /tasks/
 RUN go mod download
 ADD . /tasks/
