--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,12 @@ ENV LANG=C.UTF-8 CGO_ENABLED=0 GO111MODULE=on
 WORKDIR /tasks
 RUN apt-get update && \
   apt-get install -y mycli && \
-  go get github.com/pilu/fresh
+  go get github.com/pilu/fresh && \
+  wget -q https://github.com/schemalex/schemalex/releases/latest/download/schemalex_linux_amd64.tar.gz && \
+  tar -xzf schemalex_linux_amd64.tar.gz && \
+  cp schemalex_linux_amd64/schemalex /go/bin/schemalex && \
+  rm schemalex_linux_amd64.tar.gz && \
+  rm -rf schemalex_linux_amd64
 ADD go.mod go.sum /tasks/
 RUN go mod download
 ADD . /tasks/
