--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,9 @@ services:
     volumes:
       - ./backend:/tasks
   database:
-    image: mysql:5.7
+    image: mysql:8
     environment:
+      LANG: C.UTF-8
       MYSQL_ROOT_PASSWORD: password
   frontend:
     build: ./frontend
