--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,7 @@
 FROM golang AS builder
 ENV LANG=C.UTF-8 CGO_ENABLED=0 GO111MODULE=on
 WORKDIR /tasks
-RUN apt-get update && \
-  apt-get install -y mycli && \
-  go get github.com/pilu/fresh && \
+RUN go get github.com/pilu/fresh && \
   wget -q https://github.com/schemalex/schemalex/releases/latest/download/schemalex_linux_amd64.tar.gz && \
   tar -xzf schemalex_linux_amd64.tar.gz && \
   cp schemalex_linux_amd64/schemalex /go/bin/schemalex && \
