Load environment variables from .env

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@nuxtjs/vuetify": "^0.5.5",
     "axios": "^0.18.0",
+    "dotenv-webpack": "^1.7.0",
     "normalizr": "^3.3.0",
     "nuxt": "^2.4.5",
     "vuedraggable": "^2.19.3"
