Setup @nuxtjs/apollo

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,11 @@
   "name": "tasks",
   "private": true,
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.0-rc4",
     "@nuxtjs/vuetify": "^0.5.5",
     "axios": "^0.18.0",
     "dotenv-webpack": "^1.7.0",
+    "graphql-tag": "^2.10.1",
     "normalizr": "^3.3.0",
     "nuxt": "^2.4.5",
     "vuedraggable": "^2.19.3"
