--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - 1323:1323
     volumes:
       - ./backend:/tasks/backend
-      - ./schema.graphql:/tasks/schema.graphql
+      - ./graphql:/tasks/graphql
   database:
     image: mysql:8
     environment:
