--- a/backend/gqlgen/gqlgen.yml
+++ b/backend/gqlgen/gqlgen.yml
@@ -5,6 +5,10 @@
 
 schema:
   - ../../graphql/schema.graphql
+  - ../../graphql/query.graphql
+  - ../../graphql/mutation.graphql
+  - ../../graphql/status.graphql
+  - ../../graphql/task.graphql
 exec:
   filename: generated.go
 model:
