Add CreateTaskInput and CreateTaskPayload
When extra fields are added to input or payload, they will be added easily.

--- a/backend/gqlgen/gqlgen.yml
+++ b/backend/gqlgen/gqlgen.yml
@@ -9,6 +9,7 @@ schema:
   - ../../graphql/mutation.graphql
   - ../../graphql/status.graphql
   - ../../graphql/task.graphql
+  - ../../graphql/create_task.graphql
 exec:
   filename: generated.go
 model:
