Delete a task by deleteTask mutation

--- a/backend/gqlgen/gqlgen.yml
+++ b/backend/gqlgen/gqlgen.yml
@@ -10,6 +10,7 @@ schema:
   - ../../graphql/status.graphql
   - ../../graphql/task.graphql
   - ../../graphql/create_task.graphql
+  - ../../graphql/delete_task.graphql
 exec:
   filename: generated.go
 model:
