Add MYSQL_DATABASE to create database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,4 +22,5 @@ services:
     image: mysql:8
     environment:
       LANG: C.UTF-8
+      MYSQL_DATABASE: tasks_development
       MYSQL_ROOT_PASSWORD: password
